# SpaceAssault

./: CMakeLists.txt  README.md
config/: pch.h
config/include/config/: conf.hpp  file.hpp
config/include/options/: option.hpp  section.hpp  value.hpp
config/include/parser/: lex.hpp  parser.hpp
config/src/: conf.cpp  file.cpp
config/src/options/: option.cpp  section.cpp
config/src/parser/: lex.cpp  parser.cpp
core/: pch.h
core/include/assets/: sprite.hpp
core/include/core/: core.h  core.hpp  err.hpp  exception.h  singleton_base.hpp  sys_registry.hpp  win_includes.h
core/include/core/logger/: logger.hpp
core/include/game/: base_game.hpp  component_store.hpp  i_game.hpp  scene.hpp
core/include/game/components/: cm_transform.hpp  (+1 more)
core/include/gfx/: camera.hpp  gfx.h  gfx.hpp  renderer.hpp  window.h  window.hpp
core/src/: core.cpp
core/src/assets/: sprite.cpp
core/src/game/: base_game.cpp  component_store.cpp  scene.cpp
core/src/gfx/: camera.cpp  gfx.cpp  renderer.cpp  window.cpp
game/: pch.h
game/include/game/: game.h  game.hpp
game/include/world/: level.hpp
game/src/: game.cpp
game/src/world/: level.cpp
lodepng/: CMakeLists.txt
sa_tests/: pch.h
sa_tests/data/test_set/: lex_good.txt  parse.txt  parse_opt1.txt  section.txt
sa_tests/src/test_cases/: components.cpp  config.cpp  sprite.cpp
space_assault/: pch.h
space_assault/data/: root.cfg
space_assault/data/levels/: test_lvl.lvl
space_assault/include/assault/: assault.hpp
space_assault/src/: app_main.cpp  assault.cpp
tests/: pch.h
tests/src/: test_cases.cpp
(+7 files in other folders)
